# Desk-Share-Net

./: .gitignore  BUILD_STATUS.md  CHECKLIST.md  Cargo.toml  GIT_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_FIXES.md  MINIMAL_TEST.md  QUICK_BUILD_GUIDE.md  README.md  TESTING.md  package.json  tsconfig.json  vite.config.ts
public/: index.html
public/js/: main.js
src/: app.rs  error.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/network/: discovery.rs  file_transfer.rs  mod.rs  nat_traversal.rs  screen_share.rs
src/p2p/: discovery.rs  discovery_legacy.rs  mod.rs  network.rs  signaling.rs  signalling.rs  transport.rs
src/platform/: fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/services/: chat.rs  file_share.rs  file_share_mesh.rs  mod.rs  screen_share.rs
src/ui/: main.rs  mod.rs
tests/: e2e_tests.rs  integration_tests.rs
