[package]
name = "desk-share-net"
version = "0.1.0"
edition = "2021"

[lib]
name = "desk_share_net_lib"
path = "src/lib.rs"
crate-type = ["lib", "rlib"]


[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.53", features = [
    "tcp",
    "dns",
    "websocket",
    "kad",
    "mdns",
    "tokio",
    "noise",
    "yamux",
    "ping",
    "identify",
    "request-response",
    "macros",
] }
webrtc = "0.9"
sha2 = "0.10"
ring = "0.17"
rcgen = "0.11"
rustls = "0.21"
async-trait = "0.1"
dashmap = "5.5"
blake3 = "1.5"
rand = "0.8"
hex = "0.4"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
bytes = "1.5"
local-ip-address = "0.6"

# Screen capture dependencies
image = "0.24"
xcap = { version = "0.8", features = ["image"] }

# Platform-specific screen capture
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Graphics", "Graphics_Capture", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
io-surface = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }
wayland-client = "0.31"

# Optional: STUN/TURN servers
stun = "0.4"
turn = "0.4"
