[package]
name = "desk-share-net-app"
version = "0.1.0"
description = "Local Network Screen Sharing and File Transfer"
authors = ["You"]
license = ""
repository = ""
default-run = "desk-share-net-app"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

# Reference to the main library
desk-share-net-lib = { path = "..", package = "desk-share-net" }

# Legacy dependencies (may need cleanup)
mdns = "3.0"
local-ip-address = "0.6"
sysinfo = "0.30"
image = "0.24"
xcap = { version = "0.8", features = ["image"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
websocket = "0.26"
sha2 = "0.10"
base64 = "0.21"
walkdir = "2.4"
notify = "6.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
